[package]
name = "mumble-web-proxy"
version = "0.1.1"
authors = ["Jonas Herzig <me@johni0702.de>"]
edition = "2018"

[dependencies]
argparse = "0.2.2"
bytes = "1"
byteorder = "1.2"
futures = { version = "0.3", features = ["compat", "io-compat"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
mumble-protocol = { version = "0.4", features = ["webrtc-extensions"] }
tokio-tungstenite = "0.13"
http = "0.2"
tungstenite = "0.12"
rtp = { git = "https://github.com/haslersn/rtp", rev = "ecb7f537ec4124af0c09728422e1074a8e7fa7f4", features = ["rfc5764-openssl"] }
libnice = { git = "https://github.com/haslersn/rust-libnice", rev = "3a42b5a66a177537573772f1984deba6c7e8f6be" }
webrtc-sdp = "0.3"
openssl = "0.10"
